src/site/style.css
:root {
  --font-scale-1: 0.8em;
  --color-primary: #F76B1C;
  --color-accent2: #FAD961;
  --color-grey-900: #4f483c;
  --color-grey-850: #bcb893;
  --color-grey-100: #faeab5;
  --color-grey-50: #fff0d5;
  --color-grey-0: #fff;
}

html, body {
    height: 100%;
}

body {
    font-family: 'Courier New', Courier, monospace;
    font-size: 18px;
    margin: 0;
    background-color: #ced9e4;
    background-color: var(--color-grey-100);
    color: #4e7288;
    color: var(--color-grey-900);
}

main {
    flex: 0 1 auto;
}

input {
    box-sizing: border-box;
}

:link {
    color: #F76B1C;
    text-decoration: none;
}
:visited {
    color: #b63;
}
a:focus,
a:hover {
    color: #b63;
}
a:active {
    color: #f94;
}

p,
h1,
h2,
h3 {
    margin: 0;
}

button {
    font-size: 1.1em;
    background: transparent;
    padding: 0.6em;
    border: solid 0.1em #4e7288;
    border-color: var(--color-grey-900);
    color: #4e7288;
    color: var(--color-grey-900);
}

figure {
    margin: 0;
}

.sticky-footer {
    display: flex;
    flex-direction: column;
}

.sticky-footer__content {
    flex: 1 0 auto;
}

.sticky-footer__footer {
    flex-shrink: 0;
}

.stack > *:not(script):not(style) + * {
    display: block;
    margin-top: 1em;
}

.stack--gap-small > *:not(script):not(style) + * {
    margin-top: 0.4em;
}

.stack--gap-medium > *:not(script):not(style) + * {
    margin-top: 2em;
}
.stack--gap-large > *:not(script):not(style) + * {
    margin-top: 4em;
}

.image--responsive-restricted {
    height: auto;
    max-width: 100%;
    max-height: 80vh;
}

.image--responsive {
    height: auto;
    width: 100%;
}
.image--small {
    width: 10em;
    height: auto;
}

.section {
    padding: 1em;
}
.section__inside {
    margin: auto;
    max-width: 70ch;
}
.input-group > textarea,
.input-group > input {
    width: 100%;
}

.gallery {
    align-items: baseline;
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: space-between;
    list-style-type: none;
    padding-left: 0;
}

.gallery__card {
    flex: 1 0 18em;
    width: 18em;
    max-width: calc(50% - var(--gap));
}



.card {
    position: relative;
}

.card__image {
    height: auto;
    max-width: 100%;
    max-height: 80vh;
}

.card__image-clip {
    box-sizing: border-box;
    max-height: 18em;
    overflow-y: hidden;
    /* HACK fixes flexbox accounting for clipped contents */
    width: 100%;
}

/* for full-width gallery items */
/* HACK gallery__card--featured */
.featured-card {
    min-width: 100%;
}

/* HACK gallery__card--featured__image-clip */
.featured-card__image-clip {
    display: inline-flex;
    max-height: max-content;
}

.image-wrapper {
    align-items: center;
    background-color: #bcb893;
    background-color: var(--color-grey-850);
    display: flex;
    justify-content: center;
    min-height: 6em;
}


.card__title {
    color: #15181e;
    color: var(--color-grey-900);
    line-height: 1;
}
/* TODO revise revise naming */
.card__image-placeholder {
    width: 100%;
    height: 13em;
    background-color: #4e7288;
    background-color: var(--color-grey-900);
    background-image:
    linear-gradient(45deg, #5F7F93 25%, transparent 25%),
    linear-gradient(-45deg, #5F7F93 25%, transparent 25%),
    linear-gradient(45deg, transparent 75%, #5F7F93 75%),
    linear-gradient(-45deg, transparent 75%, #5F7F93 75%);
    background-image:
    linear-gradient(45deg, var(--color-grey-850) 25%, transparent 25%),
    linear-gradient(-45deg, var(--color-grey-850) 25%, transparent 25%),
    linear-gradient(45deg, transparent 75%, var(--color-grey-850) 75%),
    linear-gradient(-45deg, transparent 75%, var(--color-grey-850) 75%);
    background-size:20px 20px;
    background-position: 0 0, 0 10px, 10px -10px, -10px 0px;
}

.card__link {

    color: var(--color-grey-900);
}
.card__link::after {
    content: " ";
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
}


.gallery {
    --gap: 3em;
}
.gallery__card {
    margin-right: 3em;
    margin-right: var(--gap);
    margin-bottom: 3em;
    margin-bottom: var(--gap);
}

.site-header {
  border-bottom: 0.1em solid #15181e;
  border-bottom-color: var(--color-grey-900);
  display: flex;
  justify-content: space-between;
}

/* borrowed sausage links idea from https://uglyduck.ca/hamburger-menu-alternative/ */



.site-nav__items {
    display: inline-block;
    display: inline-flex;
    flex-wrap: nowrap;
    list-style-type: none;
    margin: 0;
    padding: 0 1em;
    position: relative;
    justify-content: center;
}

.nav-item {
    position: relative;
    padding: 1em 0;
    white-space: nowrap;
}

.nav-item:not(:last-child) {
  margin-right: 1em;
}

.nav-item__link {
    text-decoration: none;
    color: #15181e;
    color: var(--color-grey-900);
}
.nav-item:hover,
.nav-item:focus {
    font-style: bold;
}
.nav-item__link:hover,
.nav-item__link:focus {

}

.nav-item--active .nav-item__link {
    font-weight: bolder;
}


.cursor {
    --size: 0.8em;
    transform: scaleY(0);
}

.cursor__outer {
    background: #ced9e4;
    background: linear-gradient(45deg, transparent 45%, #ced9e4 45%);
    background: linear-gradient(45deg, transparent 45%, var(--color-grey-100) 45%);
    border: 0.1em solid #15181e;
    border-color: var(--color-grey-900);
    border-left-color: transparent;
    border-bottom-color: transparent;
    display: flex;
    height: 0.8em;
    height: var(--size);
    justify-content: center;
    align-items: center;
    transform: rotate(-46deg);
    width: 0.8em;
    width: var(--size);
}

.cursor__inner {
    background: linear-gradient(45deg, #15181e 0%, #15181e 50%, transparent 51% );
    background: linear-gradient(45deg, var(--color-grey-900) 0%, var(--color-grey-900) 50%, transparent 51% );
    border: 0.1em solid #15181e;
    border-color: var(--color-grey-900);
    height: 0.4em;
    width: 0.4em;
}


.nav-item__cursor {
    left: 50%;
    transform: translateX(-50%) scaleY(0);
    top: calc(100% - 0.4em);
    position: absolute;
    visibility: hidden;
}

.nav-item__link:focus ~ .nav-item__cursor,
.nav-item:hover .nav-item__cursor,
.nav-item--active .nav-item__cursor {
    visibility: visible;
    transition: transform 300ms;
    transform: translateX(-50%) scaleY(1);
}


.nav-item__link:focus ~ .nav-item__cursor .cursor__inner,
.nav-item:hover .cursor__inner {
    visibility: hidden;
}

.nav-item--active .nav-item__link ~ .nav-item__cursor  .cursor__inner {
    visibility: visible;
}

.breadcrumbs {
    display: flex;
    flex-wrap: wrap;
    list-style-type: none;
    padding: 0;
    /* margin-right: -1.5em; */
    font-size: 0.8em;
    font-size: var(--font-scale-1);
}

.breadcrumbs__breadcrumb {
    margin-right: 1.5em;
}

.breadcrumbs__breadcrumb + .breadcrumbs__breadcrumb::before {
    display: inline-block;
    content: ' ';
    width: 0.35em;
    height: 0.35em;
    transform: rotate(45deg);
    border: 0.1em solid;
    border-left-width: 0;
    border-bottom-width: 0;
    margin-right: 1.35em;
}

.user-icon-frame {
    border: double 0.4em;
    height: 4em;
    overflow: hidden;
    transform: rotate(45deg);
    position: relative;
    margin: 1em;
    width: 4em;
}

.user-icon-frame::after {
    content: ' ';
    position: absolute;
    border: 0.1em solid currentColor;
    height: 5em;
    width: 5em;
}

.user-icon-frame__image {
    width: calc(100% + 2em);
    transform: rotate(-45deg);
    transform-origin: 26% 58%;
    transform-origin: var(--image-pos, 26% 58%);
}

.site-title {
  font-weight: lighter;
  padding: 0.1em 0.6em;
  text-align: center;
  display: flex;
  align-items: center;
}
.site-title__link {
    color: inherit;
}

.site-title__link > * {
  display: inline-block;
}

.site-title__link > *:not(:last-child) {
  margin-right: 0.3em;
}

.site-logo {
	width: 0.8em;
	height: auto;
	vertical-align: baseline;
}

@media all and (max-width: 600px) {
  .site-title__text {
    border: 0;
    clip: rect(1px, 1px, 1px, 1px);
    clip-path: inset(50%);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
    word-wrap: normal !important;
  }
  .site-title__text:focus {
    background-color: #eee;
    clip: auto !important;
    clip-path: none;
    color: #444;
    display: block;
    font-size: 1em;
    height: auto;
    left: 5px;
    line-height: normal;
    padding: 15px 23px 14px;
    text-decoration: none;
    top: 5px;
    width: auto;
    z-index: 100000;
  }

  .gallery__card {
    max-width: 100%;
  }
}

